[package]
authors = ["Henrique Azank dos Santos <henriqueazank@gmail.com>"]
name = "ratatui_tests"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "hello-ratatui"
path = "src/bin/hello_ratatui.rs"

[[bin]]
name = "counter-app"
path = "src/bin/counter.rs"


[lib]
name = "ratatui_tests"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

